# nexus_hic

./: .gitignore  LICENSE  Makefile  README.md  main.cpp  pyproject.toml  run_nexus.sh
.github/workflows/: ci.yml
core/: bridge.py  cuda_engine.hpp  engine.cpp  storage.cpp  storage.hpp
data/: generate_data.py
kernels/: gemm.py  runner.py
tests/: run_tests.sh  test_correctness.py  test_performance.py  test_soak.py
